force-app/main/default/objects/Client_Satisfaction_Index__c/Client_Satisfaction_Index__c.object-meta.xml
<CustomObject>
    <description>Created this object as part of EN-0690, this object is child of Client object.</description>
    <label>Client Satisfaction Index</label>
    <nameField>
        <displayFormat>CSI-{000}</displayFormat>
        <label>Client Satisfaction Index Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Satisfaction Index</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>