force-app/main/default/objects/Client_Satisfaction_Index__c/fields/BOL_Compared_To_Other_Banks_Systems__c.field-meta.xml
<CustomField>
    <fullName>BOL_Compared_To_Other_Banks_Systems__c</fullName>
    <description>BOL compared to other banks&apos; systems - US3617</description>
    <inlineHelpText>How does Standard Bank&apos;s online banking system compare to that of other banks?</inlineHelpText>
    <label>BOL Compared to Other Banks&apos; Systems</label>
    <length>255</length>
    <type>Text</type>
</CustomField>