force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>This field is used to establish connection between Client and CSI object, created as per EN-0690</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Satisfaction Index</relationshipLabel>
    <relationshipName>Client_Satisfaction_Index</relationshipName>
    <type>Lookup</type>
</CustomField>