force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Client_Reporting_Franco__c.field-meta.xml
<CustomField>
    <fullName>Client_Reporting_Franco__c</fullName>
    <description>US-1348  CSI information should be visible to all with Client Plan access</description>
    <inlineHelpText>Captures related Client&apos;s  Reporting Franco field value</inlineHelpText>
    <label>Client Reporting Franco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>