force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Client_Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Client_Sub_Sector__c</fullName>
    <description>US-1348  CSI information should be visible to all with Client Plan access</description>
    <inlineHelpText>Captures related Client&apos;s sub sector field value</inlineHelpText>
    <label>Client Sub-Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>