force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Collaboration_Between_Divisions__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Between_Divisions__c</fullName>
    <description>How well do the divisions of the bank collaborate to offer a holistic service or solution - US3617</description>
    <inlineHelpText>How well do the divisions of the bank collaborate to offer you a holistic service or solution?</inlineHelpText>
    <label>Collaboration Between Divisions</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>