force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Contact_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Job_Title__c</fullName>
    <formula>CSI_Survey_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Job Title</label>
    <type>Text</type>
</CustomField>