force-app/main/default/objects/Client_Satisfaction_Index__c/fields/CSI_Case_Description__c.field-meta.xml
<CustomField>
    <fullName>CSI_Case_Description__c</fullName>
    <description>EN-701 CSI - Case automation &amp; data quality control.</description>
    <label>CSI Case Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>