force-app/main/default/objects/Client_Satisfaction_Index__c/fields/CSI_Case_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>CSI_Case_Owner_Name__c</fullName>
    <description>EN-701 CSI - Case automation &amp; data quality control.</description>
    <label>CSI Case Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>