force-app/main/default/objects/Client_Satisfaction_Index__c/fields/CSI_Case_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>CSI_Case_OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EN-701 CSI - Case automation &amp; data quality control.</description>
    <label>CSI Case OwnerId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Satisfaction_Index</relationshipName>
    <type>Lookup</type>
</CustomField>