force-app/main/default/objects/Client_Satisfaction_Index__c/fields/CSI_Client_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>CSI_Client_at_Risk__c</fullName>
    <description>US-1210:CSI - Improve Case automation &amp; data quality control - Update</description>
    <inlineHelpText>A client is at risk if they provide a rating of &lt; 6 for CIB, their RM, or if they are considering moving banking.</inlineHelpText>
    <label>CSI - Client at Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>