force-app/main/default/objects/Client_Satisfaction_Index__c/fields/csi_client_name__c.field-meta.xml
<CustomField>
    <fullName>csi_client_name__c</fullName>
    <description>Name of the client (EN-692).</description>
    <formula>Client__r.Name</formula>
    <inlineHelpText>Name of the client.</inlineHelpText>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>