force-app/main/default/objects/Client_Satisfaction_Index__c/fields/CSI_Credit_Comment__c.field-meta.xml
<CustomField>
    <fullName>CSI_Credit_Comment__c</fullName>
    <description>Field to capture CSI Credit Comment details (SFP-4619)</description>
    <inlineHelpText>Why have you given Credit this rating?</inlineHelpText>
    <label>CSI Credit Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>