force-app/main/default/objects/Client_Satisfaction_Index__c/fields/CSI_Credit_Turnaround__c.field-meta.xml
<CustomField>
    <fullName>CSI_Credit_Turnaround__c</fullName>
    <description>Rating of the Credit turnaround time and process</description>
    <inlineHelpText>Rate your experience with Standard Bank’s Credit process from request to pay out.</inlineHelpText>
    <label>CSI Credit Turnaround</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>