force-app/main/default/objects/Client_Satisfaction_Index__c/fields/CSI_GM_Comment__c.field-meta.xml
<CustomField>
    <fullName>CSI_GM_Comment__c</fullName>
    <description>CSI GM Comment (EN-692).</description>
    <inlineHelpText>Why have you given Global Markets this rating?</inlineHelpText>
    <label>CSI GM Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>