force-app/main/default/objects/Client_Satisfaction_Index__c/fields/CSI_IB_Comment__c.field-meta.xml
<CustomField>
    <fullName>CSI_IB_Comment__c</fullName>
    <description>CSI IB Comment (EN-692).</description>
    <inlineHelpText>Why have you given Investment Banking this rating?</inlineHelpText>
    <label>CSI IB Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>