force-app/main/default/objects/Client_Satisfaction_Index__c/fields/CSI_Project_Country__c.field-meta.xml
<CustomField>
    <fullName>CSI_Project_Country__c</fullName>
    <description>CSI Project Country (EN-692).</description>
    <label>CSI Project Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Botswana</fullName>
            </value>
            <value>
                <fullName>Cote d&apos;Ivoire</fullName>
            </value>
            <value>
                <fullName>Democratic Republic of the Congo</fullName>
            </value>
            <value>
                <fullName>DRC</fullName>
            </value>
            <value>
                <fullName>Eswatini</fullName>
            </value>
            <value>
                <fullName>Ghana</fullName>
            </value>
            <value>
                <fullName>Kenya</fullName>
            </value>
            <value>
                <fullName>Lesotho</fullName>
            </value>
            <value>
                <fullName>Malawi</fullName>
            </value>
            <value>
                <fullName>Mauritius</fullName>
            </value>
            <value>
                <fullName>Mozambique</fullName>
            </value>
            <value>
                <fullName>Namibia</fullName>
            </value>
            <value>
                <fullName>Nigeria</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
                <default>true</default>
                <label>South Africa</label>
            </value>
            <value>
                <fullName>South Sudan</fullName>
            </value>
            <value>
                <fullName>Swaziland</fullName>
            </value>
            <value>
                <fullName>Tanzania</fullName>
            </value>
            <value>
                <fullName>Uganda</fullName>
            </value>
            <value>
                <fullName>Zambia</fullName>
            </value>
            <value>
                <fullName>Zimbabwe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>