force-app/main/default/objects/Client_Satisfaction_Index__c/fields/CSI_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>CSI_Project_Name__c</fullName>
    <description>CSI Project Name (EN-692).</description>
    <label>CSI Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>