force-app/main/default/objects/Client_Satisfaction_Index__c/fields/CSI_Rating_Scale__c.field-meta.xml
<CustomField>
    <fullName>CSI_Rating_Scale__c</fullName>
    <formula>&quot;1-6 Client at Risk | 7 Room for Improvement | 8 Satisfied | 9-10 Extremely Satisfied&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSI Rating Scale</label>
    <type>Text</type>
</CustomField>