force-app/main/default/objects/Client_Satisfaction_Index__c/fields/CSI_Survey_Contact__c.field-meta.xml
<CustomField>
    <fullName>CSI_Survey_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CSI Survey Contact (EN-692).</description>
    <label>CSI Survey Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <errorMessage>Please enter an active Client Contact. Bank Contacts (Employees) or inactive contacts cannot be captured.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client Contact Record Type</value>
        </filterItems>
        <filterItems>
            <field>Contact.Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Bank Contact Record Type</value>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Satisfaction Index</relationshipLabel>
    <relationshipName>Client_Satisfaction_Index</relationshipName>
    <type>Lookup</type>
</CustomField>