force-app/main/default/objects/Client_Satisfaction_Index__c/fields/CSI_TPS_Comment__c.field-meta.xml
<CustomField>
    <fullName>CSI_TPS_Comment__c</fullName>
    <description>CSI TPS Comment (EN-692).</description>
    <inlineHelpText>Why have you given Transactional Banking this rating?</inlineHelpText>
    <label>CSI TPS Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>