force-app/main/default/objects/Client_Satisfaction_Index__c/fields/CSI_Wallet_Share_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CSI_Wallet_Share_Opportunity__c</fullName>
    <description>CSI Wallet Share Opportunity (EN-692).</description>
    <inlineHelpText>What is the one thing the bank can do to improve your banking experience?</inlineHelpText>
    <label>CSI Wallet Share Opportunity</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>