force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Digital_Innovation_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Digital_Innovation_Recommendations__c</fullName>
    <description>US-3978</description>
    <inlineHelpText>What digital innovation would you like to see from Standard Bank?</inlineHelpText>
    <label>Digital Innovation Recommendations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>