force-app/main/default/objects/Client_Satisfaction_Index__c/fields/IB_CSI_Rating__c.field-meta.xml
<CustomField>
    <fullName>IB_CSI_Rating__c</fullName>
    <description>IB CSI Rating (EN-692).</description>
    <inlineHelpText>Rate your Investment Banking experience.</inlineHelpText>
    <label>IB CSI Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Rated</fullName>
                <default>true</default>
                <label>Not Rated</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>