force-app/main/default/objects/Client_Satisfaction_Index__c/fields/IB_CSI_Rating_Number__c.field-meta.xml
<CustomField>
    <fullName>IB_CSI_Rating_Number__c</fullName>
    <label>IB CSI Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>