force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Leading_Bank_Competitive_Advantage__c.field-meta.xml
<CustomField>
    <fullName>Leading_Bank_Competitive_Advantage__c</fullName>
    <description>Perceived leading bank comments  - US3617</description>
    <inlineHelpText>What makes them the leading bank?</inlineHelpText>
    <label>Leading Bank&apos;s Competitive Advantage</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>