force-app/main/default/objects/Client_Satisfaction_Index__c/fields/More_Frequent_RM_Interaction_Required__c.field-meta.xml
<CustomField>
    <fullName>More_Frequent_RM_Interaction_Required__c</fullName>
    <description>More frequent RM interaction required  - US3617</description>
    <inlineHelpText>Would you like to meet with your RM more frequently?</inlineHelpText>
    <label>More Frequent RM Interaction Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>