force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Overall_CIB_CSI_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_CIB_CSI_Rating__c</fullName>
    <description>This field is used to record the CIB Rating, created as per EN-0690</description>
    <inlineHelpText>Rate your CIB experience. 1-6 Client at Risk | 7 Room for Improvement | 8 Satisfied | 9-10 Extremely Satisfied</inlineHelpText>
    <label>Overall CIB CSI Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Rated</fullName>
                <default>true</default>
                <label>Not Rated</label>
            </value>
            <value>
                <fullName>1</fullName>
                <color>#330000</color>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <color>#660000</color>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <color>#990000</color>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <color>#CC0000</color>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <color>#FF0000</color>
                <label>5</label>
            </value>
            <value>
                <fullName>6</fullName>
                <color>#FF6666</color>
                <label>6</label>
            </value>
            <value>
                <fullName>7</fullName>
                <color>#FF9966</color>
                <label>7</label>
            </value>
            <value>
                <fullName>8</fullName>
                <color>#BBBBBB</color>
                <label>8</label>
            </value>
            <value>
                <fullName>9</fullName>
                <color>#009900</color>
                <label>9</label>
            </value>
            <value>
                <fullName>10</fullName>
                <color>#006600</color>
                <label>10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>