force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Parts_Of_Banking_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Parts_Of_Banking_At_Risk__c</fullName>
    <description>Parts of banking at risk  - US3617</description>
    <inlineHelpText>What parts of your banking are you considering moving?</inlineHelpText>
    <label>Parts of Banking at Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>