force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Perceived_Leading_Bank__c.field-meta.xml
<CustomField>
    <fullName>Perceived_Leading_Bank__c</fullName>
    <description>Perceived leading bank  - US3617</description>
    <inlineHelpText>Who do you consider to be the leading corporate and investment bank?</inlineHelpText>
    <label>Perceived Leading Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>