force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Preferred_Bank_Collections__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Bank_Collections__c</fullName>
    <description>Preferred Bank for Collections - US3617</description>
    <inlineHelpText>Who is your preferred bank for Collections?</inlineHelpText>
    <label>Preferred Bank for Collections</label>
    <length>255</length>
    <type>Text</type>
</CustomField>