force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Preferred_Bank_for_Advisory_Services__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Bank_for_Advisory_Services__c</fullName>
    <description>Field to capture Preferred Bank for Advisory Services survey response (SFP-4619)</description>
    <inlineHelpText>Who is your preferred bank for Advisory Services?</inlineHelpText>
    <label>Preferred Bank for Advisory Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>