force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Preferred_Bank_for_Bonds__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Bank_for_Bonds__c</fullName>
    <description>Field to capture Preferred Bank for Bonds survey response (SFP-4619)</description>
    <inlineHelpText>Who is your preferred bank for Bonds?</inlineHelpText>
    <label>Preferred Bank for Bonds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>