force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Preferred_Bank_for_Capital_Markets__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Bank_for_Capital_Markets__c</fullName>
    <description>Field to capture Preferred Bank for Capital Markets survey response (SFP-4619)</description>
    <inlineHelpText>Who is your preferred bank for Capital Markets?</inlineHelpText>
    <label>Preferred Bank for Capital Markets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>