force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Preferred_Bank_for_Structured_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Bank_for_Structured_Solutions__c</fullName>
    <description>Field to capture Preferred Bank for Structured Solutions survey response (SFP-4619)</description>
    <inlineHelpText>Who is your preferred bank for Structured Solutions?</inlineHelpText>
    <label>Preferred Bank for Structured Solutions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>