force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Preferred_Bank_FX__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Bank_FX__c</fullName>
    <description>Preferred Bank for FX - US3617</description>
    <inlineHelpText>Who is your preferred bank for FX?</inlineHelpText>
    <label>Preferred Bank for FX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>