force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Preferred_Bank_Money_Markets__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Bank_Money_Markets__c</fullName>
    <description>Preferred Bank for Money Markets - US3617</description>
    <inlineHelpText>Who is your preferred bank for Money Markets?</inlineHelpText>
    <label>Preferred Bank for Money Markets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>