force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Preferred_Bank_Payments__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Bank_Payments__c</fullName>
    <description>Preferred Bank for Payments - US3617</description>
    <inlineHelpText>Who is your preferred bank for Payments?</inlineHelpText>
    <label>Preferred Bank for Payments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>