force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Preferred_Bank_Trade__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Bank_Trade__c</fullName>
    <description>Preferred Bank for Trade - US3617</description>
    <inlineHelpText>Who is your preferred bank for Trade?</inlineHelpText>
    <label>Preferred Bank for Trade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>