force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <description>US-1210 : CSI - Improve Case automation &amp; data quality control - Update</description>
    <inlineHelpText>Which Business Division(s) does this Case relate to?</inlineHelpText>
    <label>Related To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Coverage</fullName>
            </value>
            <value>
                <fullName>Global Markets</fullName>
            </value>
            <value>
                <fullName>Investment Banking</fullName>
            </value>
            <value>
                <fullName>Transactional Products and Services</fullName>
            </value>
            <value>
                <fullName>Across CIB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>