force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Date__c</fullName>
    <description>Date at which survey was created - US3617</description>
    <label>Survey Date</label>
    <type>Date</type>
</CustomField>