force-app/main/default/objects/Client_Satisfaction_Index__c/fields/Total_Revenue_Risk__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Risk__c</fullName>
    <description>EN-701 CSI - Case automation &amp; data quality control.</description>
    <label>Total Revenue Risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>