force-app/main/default/objects/Client_Satisfaction_Index__c/fields/TPS_CSI_Rating_Number__c.field-meta.xml
<CustomField>
    <fullName>TPS_CSI_Rating_Number__c</fullName>
    <label>TPS CSI Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>